# annotated-alias-detector

./: README.md  pyproject.toml  test_static_analysis.py
module_a/: __init__.py  types.py
module_a/nested/: foo.py
module_b/: __init__.py
static_analysis/: __init__.py
