[tool.poetry]
name = "python-ast-experiment"
version = "0.1.0"
description = ""
authors = ["dkamm <davidfkamm@gmail.com>"]
readme = "README.md"
packages = [{include = "python_ast_experiment"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.3.1"
jaxtyping = "^0.2.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
